--- a/wp-content/themes/dermer/css/scss/_page_default.scss
+++ b/wp-content/themes/dermer/css/scss/_page_default.scss
@@ -151,7 +151,7 @@
 
 .sidebar_list {
 	padding:105px 0 0;
-	width:260px;
+	width:280px;
 	ul {
 		list-style: none;
 		li {
@@ -168,7 +168,7 @@
 				font-size: 24px;
 				line-height: 31px;
 				text-transform: lowercase;
-				margin-bottom:30px;
+				padding-bottom:30px;
 				position: relative;
 				&:after {
 					content:"";
@@ -177,23 +177,39 @@
 					height:13px;
 					display: block;
 					position: absolute;
-					top:11px;
+					top:12px;
 					right:-24px;
+				}
+				> a {
+						cursor: pointer;
+						transition: all 200ms ease-in-out;
+						&:hover {
+							color:$bluelight;
+						}
 				}
 			}
 		}
-	ul.sub-menu {
-		//display: none;
-// 		margin:45px 0 47px;
+	ul.sub-menu.open {
 		margin:45px 0 0px;
+		height:300px;
+		opacity: 1;
+		visibility: visible;
+		li {
+			margin-bottom:20px;
+			
+		}
+	}
+	ul.sub-menu {
+		margin:0px 0 0px;
+		height: 0;
+		opacity: 0;
+		visibility: hidden;
+		transition: all 500ms linear;
 		li {
 			text-transform: uppercase;
 			font-size:14px;
 			letter-spacing: 0.2em;
-			margin-bottom:20px;
-			&:last-of-type {
-				margin-bottom:47px;
-			}
+			margin-bottom:0px;
 		}
 	}
 }
