--- a/wp-content/themes/dermer/css/scss/header.scss
+++ b/wp-content/themes/dermer/css/scss/header.scss
@@ -11,6 +11,12 @@ header {
 }
 
 
+body:not(.page-template-page-home) {
+	header {
+		box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.06);
+	}
+}
+
 
 .header_left {
 	width:690px;
