--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -35,10 +35,19 @@ img.aligncenter {
 
 .content {
 	color:$blue;
-	font-size: 16px;
-	line-height: 32px;
 	font-family: $montserrat;
 	font-weight: 400;
+	font-size:17px;
+	line-height: 32px;
+	h1.page_title {
+		font-family: $playfair;
+		font-weight: 700;
+		font-size:70px;
+		line-height: 76px;
+		border-bottom:solid 5px $beige;
+		padding-bottom:51px;
+		margin-bottom:40px;
+	}
 	h2 {
 		color:$bluelight;
 		font-size: 24px;
@@ -46,9 +55,90 @@ img.aligncenter {
 		font-family: $montserrat;
 		font-weight:700;
 		padding-bottom:9px;
+		padding-top:25px;
 	}
-	p {
-		margin-bottom:44px;
+	h3 {
+		text-transform: uppercase;
+		font-family: $montserrat;
+		font-weight: 800;
+		font-size:16px;
+		letter-spacing: 0.2em;
+		padding-top:9px;
+		padding-bottom:17px;
+	}
+	p, ul {
+		margin-bottom: 33px;
+	}
+	a {
+		color:$bluelight;
+		transition: all 200ms ease-in-out;
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+	blockquote {
+		color:$bluelight;
+		font-family: $playfair;
+		font-size:30px;
+		line-height: 52px;
+		padding:20px 0 62px;
+		padding-left: 50px;
+		padding-right:30px;
+		max-width: 920px;
+	}
+	hr {
+		height:5px;
+		width:100%;
+		background: $beige;
+		border:none;
+		display: block;
+		margin:42px 0 35px;
+	}
+	ol {
+			list-style: none;
+			counter-reset: item;
+			padding-left:50px;
+			> li {
+				counter-increment: item;
+				margin-bottom: 5px;
+				position: relative;
+				padding-left:30px;
+				margin-bottom:4px;
+	 		}
+	 		> li:before {
+	 				margin-right: 10px;
+	 				content: counter(item);
+	 				color:$bluelight;
+	 				width: 1em;
+	 				display: inline-block;
+	 				position: absolute;
+	 				top:0;
+	 				left:0;
+	 				font-family: $montserrat;
+	 				font-weight: 800;
+	 			}
+		}
+	
+	ul {
+		list-style: none;
+		padding-left:50px;
+		li {
+			position: relative;
+			padding-left:20px;
+			margin-bottom:4px;
+			&:before {
+				content:"";
+				display: block;
+				width:6px;
+				height:6px;
+				background: $beige;
+				position: absolute;
+				top:12px;
+				left:0;
+				border-radius: 50%;
+			}
+		}
 	}
 }
 
