--- a/wp-content/themes/dermer/css/scss/_page_default.scss
+++ b/wp-content/themes/dermer/css/scss/_page_default.scss
@@ -199,19 +199,22 @@
 		overflow: hidden;
 	}
 	ul.sub-menu.open {
-		//overflow: auto;
-		margin-top:45px;
-		margin-bottom:15px;
+		overflow: visible;
+		margin-top:49px;
+		margin-bottom:35px;
+		opacity: 1;
 	}
 	ul.sub-menu {
 		margin:0px;
 		transition: all 400ms ease-in-out;
 		height: 0;
+		opacity: 0;
 		li {
 			text-transform: uppercase;
 			font-size:14px;
 			letter-spacing: 0.2em;
-			margin-bottom:20px;
+			margin-bottom:28px;
+			line-height: 21px;
 			a {
 				color:$blue;
 				transition: all 200ms ease-in-out;
@@ -311,6 +314,78 @@
 		padding-left:0;
 		margin: 59px 75px 0;
 	}
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 767px) {
+	
+	.inner_main {
+    margin: 115px auto 0;
+	}
+	
+
+.inner_content {
+	margin: 45px 30px 0;
+}
+
+
+.sidebar_form {
+  padding: 71px 45px 80px;
+} 
+
+
+.sidebar_list {
+  padding: 63px 0 0;
+  width: 100%;
+  max-width: 299px;
+}
+
+
+.two_col {
+	padding: 0 0px 41px;
+}
+
+
+.sidebar_list {
+	ul.menu {
+		> li {
+				padding-bottom:15px;
+		}
+	}
+	ul.sub-menu {
+		li {
+			margin-bottom: 7px;
+		}
+	}
+	ul.sub-menu.open {
+		margin-top: 27px;
+		margin-bottom:15px;
+	}
+}
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 410px) {
+	
+	
+.sidebar_list {
+  max-width: 240px;
+  position: relative;
+  left:-8px;
+  ul.menu {
+	  > li {
+	  	&:after {
+		  	top: 11px;
+  		}
+  	}
+	}
+}
 	
 	
 } /* Media Query */
