--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -34,7 +34,7 @@ img.aligncenter {
 
 
 .content {
-	color:$blue;
+	color:#010423;
 	font-family: $montserrat;
 	font-weight: 400;
 	font-size:17px;
