--- a/wp-content/themes/dermer/css/scss/_page_team.scss
+++ b/wp-content/themes/dermer/css/scss/_page_team.scss
@@ -1,4 +1,4 @@
-body.page-template-page-team {
+body.page-template-page-team, body.page-template-page-caseresults {
 	.content {
 		h1.page_title {
 			padding-bottom: 18px;
