--- a/wp-content/themes/dermer/css/scss/_page_testimonial.scss
+++ b/wp-content/themes/dermer/css/scss/_page_testimonial.scss
@@ -1,5 +1,6 @@
 .inner_main.pattern {
 	position: relative;
+	padding:0 75px;
 	&:after {
 		content:"";
 		display: block;
@@ -13,19 +14,32 @@
 }
 
 
+
+h1.centered {
+	text-align: center;
+	position: relative;
+	z-index: 1;
+	font-size:100px;
+	padding:110px 0 0;
+	display: block;
+}
+
+
+
 .testimonial_wrapper {
 	max-width: 1550px;
-	margin:120px auto 0;
+	margin:120px auto 200px;
 	display: flex;
-	height:3000px;
 	position: relative;
 	z-index:1;
+	justify-content: space-between;
 	.testi_col {
-		width:50%;
+		width:48.2%;
 		.single_test {
 			background:#fff;
 			box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.28);
 			padding:58px 45px 100px;
+			margin-bottom:64px;
 			span.stars {
 				display: block;
 				text-align: center;
@@ -71,11 +85,89 @@
 
 
 
+
+@media screen and (max-width: 1230px) {
+	
+	
+	.testimonial_wrapper {
+		flex-direction: column;
+		max-width:650px;
+		margin: 55px auto 70px;
+		.testi_col {
+			width:100%;
+		}
+	}
+	
+	
 h1.centered {
-	text-align: center;
-	position: relative;
-	z-index: 1;
-	font-size:100px;
-	padding:110px 0 0;
-	display: block;
+	font-size:56px;
+	padding: 85px 0 0;
 }
+	
+	
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	
+	.inner_main.pattern {
+  	padding: 0 30px;
+	}
+	
+	h1.centered {
+		font-size:45px;
+		padding-top:45px;
+	}
+	
+	
+
+	
+	.testimonial_wrapper {
+		margin: 45px auto 70px;
+		.testi_col {
+			.single_test {
+				padding: 41px 45px 75px;
+				margin-bottom: 45px;
+				span.stars {
+					margin: 0 auto 33px;
+				}
+				span.testi_intro {
+					font-size: 28px;
+					line-height: 41px;
+				}
+			}
+		}
+	}
+	
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 400px) {
+	
+	
+	.testimonial_wrapper {
+		
+		.testi_col {
+			.single_test {
+				padding-left:20px;
+				padding-right:20px;
+				span.stars {
+					
+				}
+				span.testi_intro {
+					
+				}
+			}
+		}
+	}
+	
+	
+} /* Media Query */
