--- a/wp-content/themes/dermer/css/scss/_not_found.scss
+++ b/wp-content/themes/dermer/css/scss/_not_found.scss
@@ -1,14 +1,22 @@
 .not_found_wrapper {
 	text-align: center;
-	padding-top:155px;
+	padding:0 45px;
+	margin-top:240px;
+	position: relative;
+	.not_found_content {
+		position: relative;
+		z-index: 1;
+	}
 	h1.not_found {
 		color:$bluelight;
 		font-size:190px;
 		font-family: $montserrat;
 		font-weight: 800;
+		display: block;
+		padding-top: 40px;
 		&:after {
 			content:"";
-			width:45px;
+			width:53px;
 			height:5px;
 			background:$beige;
 			display: block;
@@ -21,5 +29,86 @@
 		font-size:36px;
 		line-height: 42px;
 		font-family: $playfair;
+		display: block;
+		padding:10px 0 0;
+		text-transform: lowercase;
+	}
+	span.small_header {
+		text-transform: uppercase;
+		font-family: $montserrat;
+		font-weight: 800;
+		font-size:14px;
+		letter-spacing: 0.2em;
+		display: block;
+		margin:24px 0 0;
+		line-height: 20px;
+		a {
+			 color:$bluelight;
+			 text-decoration: none;
+			 &:hover {
+				 color:$beige;
+			 }
+		 }
+	}
+	.not_found_svg_wrapper {
+		position: absolute;
+		width:100%;
+		top:0;
+		left:0;
+		span.not_found_svg {
+			svg {
+				width:370px;
+			}
+		}
+	}
+	.not_found_content {
+		
 	}
 }
+
+
+@media screen and (max-width: 990px) {
+	
+	
+	
+	.not_found_wrapper {
+		h1.not_found {
+			font-size:140px;
+			padding-top: 80px;
+		}
+		span.large_header {
+			max-width: 460px;
+			margin-left:auto;
+			margin-right:auto;
+			line-height: 46px;
+		}
+	}
+	
+	
+	
+} /* Media Query */
+
+@media screen and (max-width: 767px) {
+	
+	
+	.not_found_wrapper {
+		padding:0 20px;
+		h1.not_found {
+			font-size:100px;
+			padding-top: 100px;
+		}
+		span.large_header {
+			font-size: 30px;
+			 line-height: 41px;
+		}
+		.not_found_svg_wrapper {
+			span.not_found_svg {
+				svg {
+					width: 268px;
+				}
+			}
+		}
+	}
+	
+	
+} /* Media Query */
