--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -24,6 +24,7 @@
 				"page_caseresults",
 				"page_testimonial",
 				"page-practice-areas",
+				"page-contact",
 				"not_found",
 				"footer";
 
