--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -36,7 +36,8 @@ img.aligncenter {
 .content {
 	color:#010423;
 	font-family: $montserrat;
-	font-weight: 400;
+	//font-weight: 400;
+	font-weight: 500;
 	font-size:17px;
 	line-height: 32px;
 	h1.page_title {
