--- a/wp-content/themes/dermer/css/scss/_nav.scss
+++ b/wp-content/themes/dermer/css/scss/_nav.scss
@@ -197,6 +197,8 @@ nav {
 		text-align: left;
 		text-transform: lowercase;
 		font-family: $montserrat;
+		//font-weight: 400;
+		font-weight: 500;
 		font-size:13px;
 		margin-top:6px;
 		padding-left:37px;
