--- a/wp-content/themes/dermer/css/scss/_page_default.scss
+++ b/wp-content/themes/dermer/css/scss/_page_default.scss
@@ -116,6 +116,8 @@
 		text-align: left;
 		text-transform: lowercase;
 		font-family: $montserrat;
+		//font-weight: 400;
+		font-weight: 500;
 		font-size:13px;
 		margin-top:6px;
 		font-weight: 700;
