--- a/wp-content/themes/dermer/css/scss/_page-contact.scss
+++ b/wp-content/themes/dermer/css/scss/_page-contact.scss
@@ -43,7 +43,7 @@ body.page-template-page-contact {
 	span.contact_svg {
 		display: block;
 		margin-bottom: 51px;
-		svg {
+		svg, img {
 			width:135px;
 			height: 50px;
 		}
@@ -80,6 +80,8 @@ body.page-template-page-contact {
 		display: block;
 		text-decoration: none;
 		font-family: $montserrat;
+		//font-weight: 400;
+		font-weight: 500;
 		font-size:18px;
 		margin-bottom:25px;
 		span {
@@ -92,6 +94,8 @@ body.page-template-page-contact {
 	}
 	.address {
 		font-family: $montserrat;
+		//font-weight: 400;
+		font-weight: 500;
 		font-size:18px;
 		line-height: 32px;
 		text-decoration: none;
