--- a/wp-content/themes/dermer/css/scss/_page_testimonial.scss
+++ b/wp-content/themes/dermer/css/scss/_page_testimonial.scss
@@ -64,7 +64,8 @@ h1.centered {
 				font-size:16px;
 				line-height: 28px;
 				font-family: $montserrat;
-				font-weight: 400;
+				//font-weight: 400;
+				font-weight: 500;
 				margin-top:30px;
 				p {
 					margin-bottom:30px;
