--- a/wp-content/themes/dermer/css/scss/_variables.scss
+++ b/wp-content/themes/dermer/css/scss/_variables.scss
@@ -4,7 +4,7 @@ $themePath: '/wp-content/themes/dermer/';
 
 $montserrat: 'Montserrat', sans-serif;
 
-// regular 400, bold 700, extrabold 800
+// regular 400, medium 500, bold 700, extrabold 800
 
 $playfair: 'Playfair Display', serif;
 
