--- a/wp-content/themes/dermer/css/scss/homepage/section_four.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_four.scss
@@ -30,7 +30,7 @@
 			width:52px;
 			height:5px;
 			background: $beige;
-			margin-right:38px;
+			margin-right: 32px;
 			vertical-align: top;
 			margin-top:9px;
 		}
@@ -42,7 +42,7 @@
 		font-weight:800;
 		line-height: 66px;
 		margin:38px 0 0;
-		
+		max-width: 800px;
 	}
 }
 
