--- a/wp-content/themes/dermer/css/scss/homepage/section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_one.scss
@@ -57,7 +57,7 @@ a.button {
 	font-family: $montserrat;
 	font-weight:800;
 	margin:53px 0 0;
-	padding:27px 25px 25px;
+	padding:27px 25px;
 	letter-spacing: 0.17em;
 	transition: all 200ms ease-in-out;
 	&:hover {
