--- a/wp-content/themes/dermer/css/scss/homepage/section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_one.scss
@@ -9,6 +9,8 @@
 
 .section_one_inner {
 	padding: 201px 125px 0;
+	max-width:1919px;
+	margin:0 auto;
 }
 
 
@@ -78,7 +80,8 @@ a.button {
 	
 	
 	#section_one {
-		background-position: top right;
+		background-position: top center;
+		height:850px;
 	}
 	
 	
