--- a/wp-content/themes/dermer/css/scss/homepage/section_two.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_two.scss
@@ -118,6 +118,7 @@
 	
 .sec_two_inner {
 	padding: 177px 0 0;
+
 }
 
 
@@ -134,9 +135,14 @@
 span.slide_content {
 	display: block;
 	margin: 50px 0 0px;
+	font-size:15px;
 	&:before {
 		margin-bottom:25px;
 	}
+}
+
+.single_slide_inner {
+	max-width: 290px;
 }
 	
 	
@@ -177,9 +183,8 @@ span.slide_content {
 	}
 	
 	.single_slide_inner {
-		max-width: 369px;
-	}
-	
+    max-width: 324px;
+}
 	.single_slide.slide_two {
 		margin-top:3px;
 	}
