--- a/wp-content/themes/dermer/css/scss/homepage/section_three.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_three.scss
@@ -1,5 +1,5 @@
 #section_three {
-	margin:-143px 0 130px;
+	margin: -143px 0 90px;
 	padding-left:75px;
 	padding-right:75px;
 }
@@ -57,6 +57,9 @@
 	font-size:16px;
 	h2.first { // hack job
 		padding-top:0;
+	}
+	h2 {
+		padding-top: 10px;
 	}
 }
 
