--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -1,5 +1,5 @@
 body {
-	color:$blue;
+	color:#010423;
 }
 
 
@@ -68,6 +68,7 @@ img.aligncenter {
 		padding-top:12px;
 		padding-bottom:17px;
 		line-height: 21px;
+		color:#2c3350;
 	}
 	p, ul {
 		margin-bottom: 33px;
