--- a/wp-content/themes/dermer/css/scss/_not_found.scss
+++ b/wp-content/themes/dermer/css/scss/_not_found.scss
@@ -28,6 +28,7 @@
 		font-weight: 700;
 		font-size:36px;
 		line-height: 42px;
+		color:#112243;
 		font-family: $playfair;
 		display: block;
 		padding:10px 0 0;
@@ -42,6 +43,7 @@
 		display: block;
 		margin:24px 0 0;
 		line-height: 20px;
+		color:#192d50;
 		a {
 			 color:$bluelight;
 			 text-decoration: none;
