--- a/wp-content/themes/dermer/css/scss/_page_testimonial.scss
+++ b/wp-content/themes/dermer/css/scss/_page_testimonial.scss
@@ -25,6 +25,7 @@ h1.centered {
 	padding:110px 0 0;
 	display: block;
 	padding: 102px 0 0;
+	color:#192d50;
 }
 
 
@@ -64,6 +65,7 @@ h1.centered {
 				font-size:16px;
 				line-height: 28px;
 				font-family: $montserrat;
+				color:#172c57;
 				//font-weight: 400;
 				font-weight: 500;
 				margin-top:30px;
