--- a/wp-content/themes/dermer/css/scss/_page-blog.scss
+++ b/wp-content/themes/dermer/css/scss/_page-blog.scss
@@ -36,6 +36,7 @@ body.blog, body.archive, body.single {
 		font-weight: 800;
 		font-size:24px;
 		line-height: 32px;
+		color:#192d50;
 		&:after {
 			content:"";
 			width:60px;
