--- a/wp-content/themes/dermer/css/scss/_page_default.scss
+++ b/wp-content/themes/dermer/css/scss/_page_default.scss
@@ -154,8 +154,8 @@
 .sidebar_list {
 	padding:105px 0 0;
 	width:280px;
-	margin-left:auto;
-	margin-right:auto;
+	margin-left: 17%;
+	margin-right:30px;
 	ul {
 		list-style: none;
 		li {
@@ -309,6 +309,9 @@
 	
 	.sidebar_list {
 		padding: 77px 0 0;
+		margin-left:auto;
+		margin-right:auto;
+		width: 400px;
 	}
 	
 	.inner_content {
