--- a/wp-content/themes/dermer/css/scss/homepage/section_six.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_six.scss
@@ -108,6 +108,7 @@
 		letter-spacing: 0.16em;
 		font-size:15px;
 		display: block;
+		color:#2c3350;
 		&:before {
 			content:"";
 			display: inline-block;
