--- a/wp-content/themes/dermer/css/scss/_page-contact.scss
+++ b/wp-content/themes/dermer/css/scss/_page-contact.scss
@@ -84,6 +84,7 @@ body.page-template-page-contact {
 		font-weight: 500;
 		font-size:18px;
 		margin-bottom:25px;
+		text-decoration: none;
 		span {
 			text-transform: uppercase;
 			font-family: $montserrat;
