--- a/wp-content/themes/dermer/css/scss/_page_default.scss
+++ b/wp-content/themes/dermer/css/scss/_page_default.scss
@@ -346,7 +346,18 @@
 }
 
 .sidebar_form {
-  padding: 71px 45px 80px;
+  padding: 71px 30px 80px;
+  ul {
+	  li {
+		  &:after {
+			  top: 31px;
+				right: 24px;
+		  }
+		  input,textarea {
+			  padding: 24px 60px 24px 30px;
+		  }
+	  }
+  }
 } 
 
 
