--- a/wp-content/themes/dermer/css/scss/_nav.scss
+++ b/wp-content/themes/dermer/css/scss/_nav.scss
@@ -447,7 +447,7 @@ nav.close_nav {
 	
 	.nav_right {
 		display: block;
-		transform: translate(0,-100%);
+		//transform: translate(0,-100%);
 	}
 	
 	
