--- a/wp-content/themes/dermer/css/scss/_page_caseresults.scss
+++ b/wp-content/themes/dermer/css/scss/_page_caseresults.scss
@@ -15,6 +15,7 @@
 		font-weight: 800;
 		font-size:54px;
 		letter-spacing: 0.02em;
+		text-transform: uppercase;
 	}
 	span.small_header {
 		text-transform: uppercase;
