--- a/wp-content/themes/dermer/css/scss/footer.scss
+++ b/wp-content/themes/dermer/css/scss/footer.scss
@@ -226,7 +226,7 @@ footer {
 			li#field_1_5 {
 				flex-basis: 100%;
 				&:after {
-					left:230px;
+					//left:230px;
 				}
 			}
 			li {
@@ -432,7 +432,7 @@ footer {
 		   ul {
 			   li#field_1_5 {
 				   &:after {
-					   left: 174px;
+					   //left: 174px;
 				   }
 			   }
 			   li {
@@ -558,8 +558,10 @@ body.page-template-default,  body.page-template-page-practiceareas_directory, bo
 				display: block;
 				li#field_1_5 {
 					&:after {
+/*
 						right: 17px;
 						left:auto;
+*/
 					}
 				}
 				li {
@@ -617,6 +619,10 @@ body.page-template-default,  body.page-template-page-practiceareas_directory, bo
 	   text-align: center;
 	   ul {
 		   li {
+			   padding-left:0.1em;
+			   &:nth-of-type(2) {
+				   margin-right:0;
+			   }
 			   font-size:10px;
 			   &:after {
 				   content:"";
