--- a/wp-content/themes/dermer/css/scss/homepage/_section_seven.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_seven.scss
@@ -1,5 +1,5 @@
 #section_seven {
-	background: url(#{$themePath}images/testimonials-bg-1920.jpg) top center;
+// 	background: url(#{$themePath}images/testimonials-bg-1920.jpg) top center;
 	background-size:cover;
 	width:100%;
 	padding: 0 60px 181px;
