--- a/wp-content/themes/dermer/css/scss/homepage/_section_five.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_five.scss
@@ -37,11 +37,13 @@
 	left:0;
 	width:100%;
 	height:100%;
+	background-size:cover;
 	transform: scale(1);
 	transition: all 1500ms cubic-bezier(.17,.66,.34,.98);
 }
 
 
+/*
 .sec_five_bg_image.one {
 	background: url(#{$themePath}images/pa-1.jpg) top center no-repeat;
 	background-size:cover;
@@ -71,6 +73,7 @@
 	background: url(#{$themePath}images/pa-6.jpg) top center no-repeat;
 	background-size:cover;
 }
+*/
 
 .sec_five_slide_content {
 	position: absolute;
