--- a/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
@@ -1,10 +1,23 @@
 #section_one {
-	background: url(#{$themePath}images/hero-1920.jpg) top center no-repeat;
+	//background: url(#{$themePath}images/hero-1920.jpg) top center no-repeat;
 	background-size:cover;
 	width:100%;
 	height:990px;
 	margin:129px 0 0;
 }
+
+html.webp {
+	#section_one {
+		background: url(#{$themePath}images/hero-1920.webp) top center no-repeat;
+	}
+}
+
+html.no-webp {
+	#section_one {
+		background: url(#{$themePath}images/hero-1920.jpg) top center no-repeat;
+	}
+}
+
 
 
 .section_one_inner {
@@ -195,8 +208,21 @@ a.button {
 	
 	
 	#section_one {
+// 		background: url(#{$themePath}images/hero-768.jpg) top center no-repeat;
+	}
+	
+		
+html.webp {
+	#section_one {
+		background: url(#{$themePath}images/hero-768.webp) top center no-repeat;
+	}
+}
+
+html.no-webp {
+	#section_one {
 		background: url(#{$themePath}images/hero-768.jpg) top center no-repeat;
 	}
+}
 	
 	
 } /* Media Query */
@@ -209,9 +235,22 @@ a.button {
 	#section_one {
 		margin: 115px 0 0;
 		height: 503px;
-		background: url(#{$themePath}images/hero-414.jpg) top center;
+		// background: url(#{$themePath}images/hero-414.jpg) top center;
 		position: relative;
 	}
+	
+	html.webp {
+	#section_one {
+		background: url(#{$themePath}images/hero-414.webp) top center no-repeat;
+	}
+}
+
+html.no-webp {
+	#section_one {
+		background: url(#{$themePath}images/hero-414.jpg) top center no-repeat;
+	}
+}
+
 	
 	.section_one_inner {
     padding: 0px 0px 0;
