--- a/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
@@ -32,9 +32,12 @@ span.section_one_title {
 	text-transform: uppercase;
 	font-size:18px;
 	font-family: $montserrat;
-	font-weight: 800;
+	font-weight: 500;
 	letter-spacing: 0.2em;
 	display: inline-block;
+	span {
+		font-weight: 800;
+	}
 	&:before {
 		content:"";
 		width:54px;
